# volley-platform

./: .gitignore  README.md  package-lock.json  pyproject.toml  render.yaml
backend/: alembic.ini  structure.txt
backend/app/: auth.py  database.py  init_db.py  main.py  models.py  settings.py
backend/app/dependencies/: auth.py  roles.py
backend/app/migrations/: env.py  script.py.mako
backend/app/migrations/versions/: 7f3b2b9a1c4d_article_module_tables.py  c3a8e4d91b2f_article_comments.py  d62f8a4ffe9e_initial_schema.py
backend/app/routers/: ai_training.py  articles.py  auth.py  clubs.py  drills.py  fees.py  forum.py  trainings.py  users.py
backend/app/schemas/: __init__.py  article.py  drill.py  fees.py  forum.py  training.py  user.py
backend/app/seed/: __init__.py  clubs.csv  drills.csv  seed_clubs.py  seed_drills.py
backend/app/services/: __init__.py  article_service.py  bulgarian_training_generator.py  forum_service.py  hybrid_training_generator.py
backend/app/templates/: drills.html  generator.html
backend/tests/: test_bulgarian_training_generator.py  test_hybrid_training_generator.py
frontend/volley-platform-client/: index.html  package-lock.json  package.json
frontend/volley-platform-client/src/: App.css  App.jsx  Navbar.jsx  index.css  main.jsx
frontend/volley-platform-client/src/auth/: AdminGuard.jsx  AuthContext.jsx  ProtectedRoute.jsx
frontend/volley-platform-client/src/components/: AdminGuard.jsx  DrillMediaPreviewModal.jsx  DrillModal  ProtectedRoute.jsx  RichTextToolbar.jsx  ToastProvider.jsx
scripts/: check_startup.py
(+54 files in other folders)
